--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ language: go
 go:
   - "1.13"
 
+dist: xenial
+os: linux
+
 env:
   global:
   - GO111MODULE=on
@@ -15,7 +18,6 @@ install:
   - export GO111MODULE=on
   - go get -u
 
-install: true
 script:
   - go mod init
 
@@ -35,12 +37,12 @@ jobs:
         - cd $(mktemp -d); go mod init tmp; go get mvdan.cc/gofumpt; cd $TRAVIS_BUILD_DIR
         - git diff --quiet || (echo "\033[0;31mWorking directory not clean!\033[0m" && exit 1) # Check working dir clean
         - gofumpt -w -s . # Fmt
-    # - name: "tidy"
-    #   script:
-    #     - git diff --quiet || (echo "\033[0;31mWorking directory not clean!\033[0m" && exit 1) # Check working dir clean
-    #     - go mod init; go mod tidy # Tidy
+    - name: "tidy"
+      script:
+        - git diff --quiet || (echo "\033[0;31mWorking directory not clean!\033[0m" && exit 1) # Check working dir clean
+        - go mod init; go mod tidy # Tidy
     - stage: test
       name: "test"
       script:
         - go run main.go # Run main
-        - chmod +x ./scripts/test.sh && ./scripts/test.sh # Run unit tests
+        - go test ./...  # Test modules 
