--- a/.travis.yml
+++ b/.travis.yml
@@ -27,10 +27,11 @@ before_script:
   - GO_FILES=$(find . -iname '*.go' -type f | grep -v -r ./vendor/) # All the .go files, excluding vendor/, .vendor-new/
   # For .vendor-new inclusion, GO_FILES=$(find . -iname '*.go' -type f | grep -v -r ./vendor/ ./.vendor-new/)
   - go get -u golang.org/x/lint/golint
+  - go mod init; go mod vendor
 
 script:
   - test -z $(gofmt -s -l $GO_FILES) # Fail if a .go file hasn't been formatted with gofmt
   - go vet ./... # Go vet is the official Go static analyzer
-  - chmod +x ./test.sh && ./test.sh # Run unit tests
+  - chmod +x ./scripts/test.sh && ./scripts/test.sh # Run unit tests
   - go build # Build
 
